# TDH_Socket

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  bootstrap.sh  configure.ac
TDHSocket/: .gitignore  Makefile.am  default_mysql_sysvar_for_tdh_socket.hpp  mysql_inc.hpp  tdh_socket.cpp  tdh_socket_config.cpp  tdh_socket_config.hpp  tdh_socket_connection_context.cpp  tdh_socket_connection_context.hpp  tdh_socket_dbcontext.cpp  tdh_socket_dbcontext.hpp  tdh_socket_dbutil.hpp  tdh_socket_decode_request_binary.cpp  tdh_socket_decode_request_binary.hpp  tdh_socket_decode_request_binary_v2.cpp  tdh_socket_decode_request_binary_v2.hpp  tdh_socket_encode_response.hpp  tdh_socket_handler.cpp  tdh_socket_handler.hpp  tdh_socket_monitor.cpp  tdh_socket_monitor.hpp  tdh_socket_optimize.cpp  tdh_socket_optimize.hpp  tdh_socket_request_thread.cpp  tdh_socket_request_thread.hpp  tdh_socket_share.cpp  tdh_socket_share.hpp  tdh_socket_statistic.cpp  tdh_socket_statistic.hpp  tdh_socket_table_balance.cpp  tdh_socket_table_balance.hpp  tdh_socket_thd.hpp
doc/: TDH_Socket_benchmark_report_zh_CN.xlsx  about-TDH_Socket_zh_CN.txt  design_zh_CN.txt  installation_zh_CN.txt  protocol_zh_CN.txt  status_zh_CN.txt  variable_zh_CN.txt
libeasy/: .gitignore  Makefile.am
libeasy/include/: .gitignore  Makefile.am  easy_atomic.h  easy_define.h  easy_list.h
libeasy/io/: .gitignore  Makefile.am  easy_baseth_pool.c  easy_baseth_pool.h  easy_client.c  easy_client.h  easy_connection.c  easy_connection.h  easy_file.c  easy_file.h  easy_io.c  easy_io.h  easy_io_struct.h  easy_log.c  easy_log.h  easy_message.c  easy_message.h  easy_request.c  easy_request.h  easy_socket.c  easy_socket.h  ev.c  ev.h  ev_epoll.c  ev_select.c  ev_vars.h  ev_wrap.h
libeasy/memory/: Makefile.am  easy_mem_page.c  easy_mem_page.h  easy_mem_pool.c  easy_mem_pool.h  easy_mem_slab.c  easy_mem_slab.h
libeasy/packet/: .gitignore  Makefile.am  easy_simple_handler.h
libeasy/packet/http/: easy_http_handler.c  easy_http_handler.h  http_parser.c  http_parser.h
libeasy/thread/: Makefile.am  easy_uthread.c  easy_uthread.h
libeasy/util/: Makefile.am  easy_array.c  easy_array.h  easy_buf.c  easy_buf.h  easy_hash.c  easy_hash.h  easy_inet.c  easy_inet.h  easy_pool.c  easy_pool.h  easy_string.c  easy_string.h  easy_time.c  easy_time.h
libtdhs/: Makefile.am  debug_util.hpp  tdh_socket_atomic.hpp  tdh_socket_bloom_filter.c  tdh_socket_bloom_filter.h  tdh_socket_define.hpp  tdh_socket_error.cpp  tdh_socket_error.hpp  tdh_socket_protocol.cpp  tdh_socket_protocol.hpp  tdh_socket_time.cpp  tdh_socket_time.hpp  thread_and_lock.hpp  util.hpp
python/src/: batch_statement.py  block_tdhs_client.py  exception.py  logger.py  request.py  response.py  statement.py  tdhs_common.py
python/test/: test_client.py  test_client_2.py  test_client_3.py  test_client_batch.py  test_client_count.py  test_client_del.py  test_client_insert.py  test_client_now.py  test_client_test.py  test_client_update.py
row_cache/: Installation.txt  row_cache_for_mysql.5.1.48_2012_03_22.diff  row_cache_for_mysql.5.5.21_2012_03_22.diff  row_cache_for_percona_server_5.5.18_2012_03_22.diff
